// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HirearchyView should render 1`] = `
<div>
  <div
    class="makeStyles-container-44"
  >
    <div
      class="makeStyles-nodeContainer-45 nodeContainer"
    >
      <div
        class="makeStyles-node-47"
      >
        <div
          class="makeStyles-nodeContent-48"
        >
          <div
            class="spread-icon"
            style="min-width: 30px;"
          >
            <button
              aria-label="hirearchy-client-node"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="open-hirearchy-child-list"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="makeStyles-role-51"
          >
            <svg
              height="70"
              width="70"
            >
              <circle
                cx="36"
                cy="36"
                fill="#E5E5E5"
                r="18"
              />
              <text
                fill="#AAAAAA"
                font-family="Verdana"
                font-size="13"
                font-weight="bold"
                x="26"
                y="41"
              >
                GC
              </text>
            </svg>
          </div>
          <div
            class="makeStyles-listName-70 makeStyles-listGeneralText-72"
          >
            Martin Fowler
          </div>
          <div
            class="role"
          >
            General Contractor
          </div>
          <div
            class="makeStyles-nodeTrades-50"
          >
            trade 1, trade 2, trade 3
          </div>
        </div>
        <div
          class="makeStyles-nodeStatus-49"
          style="display: flex;"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-52 makeStyles-active-58  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Accepted
            </span>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-subLevelContainer-46"
        style="display: none;"
      >
        <div
          class="makeStyles-nodeContainer-45 nodeContainer"
        >
          <div
            class="makeStyles-node-47"
          >
            <div
              class="makeStyles-nodeContent-48"
            >
              <div
                class="spread-icon"
                style="min-width: 30px;"
              >
                <button
                  aria-label="hirearchy-client-node"
                  class="MuiButtonBase-root MuiIconButton-root"
                  data-testid="open-hirearchy-child-list"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="makeStyles-role-51"
              >
                <svg
                  height="70"
                  width="70"
                >
                  <circle
                    cx="36"
                    cy="36"
                    fill="#E5E5E5"
                    r="18"
                  />
                  <text
                    fill="#AAAAAA"
                    font-family="Verdana"
                    font-size="11"
                    font-weight="bold"
                    x="24"
                    y="40"
                  >
                    DEV
                  </text>
                </svg>
              </div>
              <div
                class="makeStyles-listName-70 makeStyles-listGeneralText-72"
              >
                
              </div>
              <div
                class="role"
              >
                Developer
              </div>
              <div
                class="makeStyles-nodeTrades-50"
              />
            </div>
            <div
              class="makeStyles-nodeStatus-49"
              style="display: flex;"
            >
              <div
                class="MuiChip-root makeStyles-statusChip-52 makeStyles-active-58  MuiChip-colorPrimary"
              >
                <span
                  class="MuiChip-label"
                >
                  Accepted
                </span>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-subLevelContainer-46"
            style="display: none;"
          >
            <div
              class="makeStyles-nodeContainer-45 nodeContainer"
            >
              <div
                class="makeStyles-node-47"
              >
                <div
                  class="makeStyles-nodeContent-48"
                >
                  <div
                    class="spread-icon"
                    style="min-width: 30px;"
                  />
                  <div
                    class="makeStyles-role-51"
                  >
                    <svg
                      height="70"
                      width="70"
                    >
                      <circle
                        cx="36"
                        cy="36"
                        fill="#E5E5E5"
                        r="18"
                      />
                      <text
                        fill="#AAAAAA"
                        font-family="Verdana"
                        font-size="11"
                        font-weight="bold"
                        x="24"
                        y="40"
                      >
                        DEV
                      </text>
                    </svg>
                  </div>
                  <div
                    class="makeStyles-listName-70 makeStyles-listGeneralText-72"
                  >
                    Robert C. Martin
                  </div>
                  <div
                    class="role"
                  >
                    Developer
                  </div>
                  <div
                    class="makeStyles-nodeTrades-50"
                  >
                    trade 1, trade 2
                  </div>
                </div>
                <div
                  class="makeStyles-nodeStatus-49"
                  style="display: flex;"
                >
                  <div
                    class="MuiChip-root makeStyles-statusChip-52 makeStyles-pending-59  MuiChip-colorPrimary"
                  >
                    <span
                      class="MuiChip-label"
                    >
                      Pending
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-subLevelContainer-46"
                style="display: none;"
              />
            </div>
            <div
              class="makeStyles-nodeContainer-45 nodeContainer"
            >
              <div
                class="makeStyles-node-47"
              >
                <div
                  class="makeStyles-nodeContent-48"
                >
                  <div
                    class="spread-icon"
                    style="min-width: 30px;"
                  />
                  <div
                    class="makeStyles-role-51"
                  >
                    <svg
                      height="70"
                      width="70"
                    >
                      <circle
                        cx="36"
                        cy="36"
                        fill="#E5E5E5"
                        r="18"
                      />
                      <text
                        fill="#AAAAAA"
                        font-family="Verdana"
                        font-size="11"
                        font-weight="bold"
                        x="24"
                        y="40"
                      >
                        DEV
                      </text>
                    </svg>
                  </div>
                  <div
                    class="makeStyles-listName-70 makeStyles-listGeneralText-72"
                  >
                    Robert C. Martin
                  </div>
                  <div
                    class="role"
                  >
                    Developer
                  </div>
                  <div
                    class="makeStyles-nodeTrades-50"
                  >
                    trade 1, trade 2
                  </div>
                </div>
                <div
                  class="makeStyles-nodeStatus-49"
                  style="display: flex;"
                >
                  <div
                    class="MuiChip-root makeStyles-statusChip-52 makeStyles-pending-59  MuiChip-colorPrimary"
                  >
                    <span
                      class="MuiChip-label"
                    >
                      Pending
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-subLevelContainer-46"
                style="display: none;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HirearchyView should render children nodes 1`] = `
<div>
  <div
    class="makeStyles-container-138"
  >
    <div
      class="makeStyles-nodeContainer-139 nodeContainer"
    >
      <div
        class="makeStyles-node-141"
      >
        <div
          class="makeStyles-nodeContent-142"
        >
          <div
            class="spread-icon"
            style="min-width: 30px;"
          >
            <button
              aria-label="hirearchy-client-node"
              class="MuiButtonBase-root MuiIconButton-root"
              data-testid="open-hirearchy-child-list"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="makeStyles-role-145"
          >
            <svg
              height="70"
              width="70"
            >
              <circle
                cx="36"
                cy="36"
                fill="#E5E5E5"
                r="18"
              />
              <text
                fill="#AAAAAA"
                font-family="Verdana"
                font-size="13"
                font-weight="bold"
                x="26"
                y="41"
              >
                GC
              </text>
            </svg>
          </div>
          <div
            class="makeStyles-listName-164 makeStyles-listGeneralText-166"
          >
            Martin Fowler
          </div>
          <div
            class="role"
          >
            General Contractor
          </div>
          <div
            class="makeStyles-nodeTrades-144"
          >
            trade 1, trade 2, trade 3
          </div>
        </div>
        <div
          class="makeStyles-nodeStatus-143"
          style="display: flex;"
        >
          <div
            class="MuiChip-root makeStyles-statusChip-146 makeStyles-active-152  MuiChip-colorPrimary"
          >
            <span
              class="MuiChip-label"
            >
              Accepted
            </span>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-subLevelContainer-140"
        style="display: block;"
      >
        <div
          class="makeStyles-nodeContainer-139 nodeContainer"
        >
          <div
            class="makeStyles-node-141"
          >
            <div
              class="makeStyles-nodeContent-142"
            >
              <div
                class="spread-icon"
                style="min-width: 30px;"
              >
                <button
                  aria-label="hirearchy-client-node"
                  class="MuiButtonBase-root MuiIconButton-root"
                  data-testid="open-hirearchy-child-list"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                      />
                    </svg>
                  </span>
                </button>
              </div>
              <div
                class="makeStyles-role-145"
              >
                <svg
                  height="70"
                  width="70"
                >
                  <circle
                    cx="36"
                    cy="36"
                    fill="#E5E5E5"
                    r="18"
                  />
                  <text
                    fill="#AAAAAA"
                    font-family="Verdana"
                    font-size="11"
                    font-weight="bold"
                    x="24"
                    y="40"
                  >
                    DEV
                  </text>
                </svg>
              </div>
              <div
                class="makeStyles-listName-164 makeStyles-listGeneralText-166"
              >
                
              </div>
              <div
                class="role"
              >
                Developer
              </div>
              <div
                class="makeStyles-nodeTrades-144"
              />
            </div>
            <div
              class="makeStyles-nodeStatus-143"
              style="display: flex;"
            >
              <div
                class="MuiChip-root makeStyles-statusChip-146 makeStyles-active-152  MuiChip-colorPrimary"
              >
                <span
                  class="MuiChip-label"
                >
                  Accepted
                </span>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-subLevelContainer-140"
            style="display: none;"
          >
            <div
              class="makeStyles-nodeContainer-139 nodeContainer"
            >
              <div
                class="makeStyles-node-141"
              >
                <div
                  class="makeStyles-nodeContent-142"
                >
                  <div
                    class="spread-icon"
                    style="min-width: 30px;"
                  />
                  <div
                    class="makeStyles-role-145"
                  >
                    <svg
                      height="70"
                      width="70"
                    >
                      <circle
                        cx="36"
                        cy="36"
                        fill="#E5E5E5"
                        r="18"
                      />
                      <text
                        fill="#AAAAAA"
                        font-family="Verdana"
                        font-size="11"
                        font-weight="bold"
                        x="24"
                        y="40"
                      >
                        DEV
                      </text>
                    </svg>
                  </div>
                  <div
                    class="makeStyles-listName-164 makeStyles-listGeneralText-166"
                  >
                    Robert C. Martin
                  </div>
                  <div
                    class="role"
                  >
                    Developer
                  </div>
                  <div
                    class="makeStyles-nodeTrades-144"
                  >
                    trade 1, trade 2
                  </div>
                </div>
                <div
                  class="makeStyles-nodeStatus-143"
                  style="display: flex;"
                >
                  <div
                    class="MuiChip-root makeStyles-statusChip-146 makeStyles-pending-153  MuiChip-colorPrimary"
                  >
                    <span
                      class="MuiChip-label"
                    >
                      Pending
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-subLevelContainer-140"
                style="display: none;"
              />
            </div>
            <div
              class="makeStyles-nodeContainer-139 nodeContainer"
            >
              <div
                class="makeStyles-node-141"
              >
                <div
                  class="makeStyles-nodeContent-142"
                >
                  <div
                    class="spread-icon"
                    style="min-width: 30px;"
                  />
                  <div
                    class="makeStyles-role-145"
                  >
                    <svg
                      height="70"
                      width="70"
                    >
                      <circle
                        cx="36"
                        cy="36"
                        fill="#E5E5E5"
                        r="18"
                      />
                      <text
                        fill="#AAAAAA"
                        font-family="Verdana"
                        font-size="11"
                        font-weight="bold"
                        x="24"
                        y="40"
                      >
                        DEV
                      </text>
                    </svg>
                  </div>
                  <div
                    class="makeStyles-listName-164 makeStyles-listGeneralText-166"
                  >
                    Robert C. Martin
                  </div>
                  <div
                    class="role"
                  >
                    Developer
                  </div>
                  <div
                    class="makeStyles-nodeTrades-144"
                  >
                    trade 1, trade 2
                  </div>
                </div>
                <div
                  class="makeStyles-nodeStatus-143"
                  style="display: flex;"
                >
                  <div
                    class="MuiChip-root makeStyles-statusChip-146 makeStyles-pending-153  MuiChip-colorPrimary"
                  >
                    <span
                      class="MuiChip-label"
                    >
                      Pending
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-subLevelContainer-140"
                style="display: none;"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HirearchyView should render loading 1`] = `
<div>
  Loading...
</div>
`;
